--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <body class="body">
     <div class="page">
+        <header class="header">
+            <img src="images/logo.svg" alt="Логотип" class="header__logo">
+        </header>
         <main class="content">
         </main>
     </div>
