--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
             <img src="images/logo.svg" alt="Логотип" class="header__logo">
         </header>
         <main class="content">
+            <section class="profile">
+                <div class="profile__avatar ">
+                    <img src="images/Cousteau.jpg" alt="Аватар" class="profile__avatar-image">
+                </div>
+                <div class="profile__info">
+                    <h1 class="profile__name">Жак-Ив Кусто
+                        <button class="profile__edit-button" type="button"></button>
+                    </h1>
+                    <p class="profile__about">Исследователь океана</p>
+                </div>
+                <button class="profile__add-button" type="button"></button>
+            </section>
         </main>
     </div>
     <script src="pages/index.js"></script>
