--- a/index.html
+++ b/index.html
@@ -31,6 +31,68 @@
                 </div>
                 <button class="profile__add-button" type="button"></button>
             </section>
+            <section class="elements">
+                <ul class="elements__list">
+                    <li class="elements__item">
+                        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск"
+                            class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__title">Карачаевск</h2>
+                            <div class="elements__like">
+                                <button class="elements__like-button" type="button"></button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="elements__item">
+                        <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус"
+                            class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__title">Гора Эльбрус</h2>
+                            <div class="elements__like">
+                                <button class="elements__like-button" type="button"></button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="elements__item">
+                        <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай" class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__title">Домбай</h2>
+                            <div class="elements__like">
+                                <button class="elements__like-button" type="button"></button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="elements__item">
+                        <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус"
+                            class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__title">Гора Эльбрус</h2>
+                            <div class="elements__like">
+                                <button class="elements__like-button" type="button"></button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="elements__item">
+                        <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай" class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__title">Домбай</h2>
+                            <div class="elements__like">
+                                <button class="elements__like-button" type="button"></button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="elements__item">
+                        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкесия"
+                            class="elements__image">
+                        <div class="elements__info">
+                            <h2 class="elements__title">Карачаево-Черкесия</h2>
+                            <div class="elements__like">
+                                <button class="elements__like-button" type="button"></button>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
         </main>
     </div>
     <script src="pages/index.js"></script>
