feature/footer done

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                 </ul>
             </section>
         </main>
+        <footer class="footer">
+            <p class="footer__text">&copy; 2020 Mesto Russia</p>
     </div>
     <script src="pages/index.js"></script>
 </body>
