--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 </div>
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто
-                        <button class="profile__edit-button" type="button"></button>
+                        <button class="profile__edit-button links-opacity-60" type="button"></button>
                     </h1>
                     <p class="profile__about">Исследователь океана</p>
                 </div>
-                <button class="profile__add-button" type="button"></button>
+                <button class="profile__add-button links-opacity-60" type="button"></button>
             </section>
             <section class="elements">
                 <ul class="elements__list">
@@ -96,6 +96,7 @@
         </main>
         <footer class="footer">
             <p class="footer__text">&copy; 2020 Mesto Russia</p>
+        </footer>
     </div>
     <script src="pages/index.js"></script>
 </body>
