--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
         <footer class="footer">
             <p class="footer__text">&copy; 2020 Mesto Russia</p>
         </footer>
+        <div class="popup">
+            <div class="popup__container">
+                <button class="popup__close-button" type="button" src></button>
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <form class="popup__form" name="edit">
+                    <input type="text" name="name" class="popup__input" placeholder="Имя" minlength="2" maxlength="40"
+                        required>
+                    <input type="text" name="about" class="popup__input" placeholder="О себе" minlength="2"
+                        maxlength="200" required>
+                    <button class="popup__save-button" type="submit">Сохранить</button>
+                </form>
+            </div>
+        </div>
     </div>
     <script src="pages/index.js"></script>
 </body>
