--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                 <button class="popup__close-button" type="button" src></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form" name="edit">
-                    <input type="text" name="name" class="popup__input" placeholder="Имя" minlength="2" maxlength="40"
-                        required>
-                    <input type="text" name="about" class="popup__input" placeholder="О себе" minlength="2"
-                        maxlength="200" required>
+                    <input type="text" name="name" class="popup__input popup__input_name" placeholder="Имя"
+                        minlength="2" maxlength="40" required>
+                    <input type="text" name="about" class="popup__input popup__input_about" placeholder="О себе"
+                        minlength="2" maxlength="200" required>
                     <button class="popup__save-button" type="submit">Сохранить</button>
                 </form>
             </div>
