--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
                     <img src="images/Cousteau.jpg" alt="Аватар" class="profile__avatar-image">
                 </div>
                 <div class="profile__info">
-                    <h1 class="profile__name">Жак-Ив Кусто
-                        <button class="profile__edit-button links-opacity-60" type="button"></button>
-                    </h1>
+                    <h1 class="profile__name">Жак-Ив Кусто</h1>
+                    <button class="profile__edit-button links-opacity-60" type="button"></button>
                     <p class="profile__about">Исследователь океана</p>
                 </div>
                 <button class="profile__add-button links-opacity-60" type="button"></button>
