--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </footer>
         <div class="popup">
             <div class="popup__container">
-                <button class="popup__close-button" type="button" src></button>
+                <button class="popup__close-button" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form" name="edit">
                     <input type="text" name="name" class="popup__input popup__input_name" placeholder="Имя"
