--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 <button class="popup__close-button button-opacity-hover" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <form class="popup__form" name="edit">
-                    <input type="text" name="name" class="popup__input popup__form_input_name" placeholder="Имя"
+                    <input type="text" name="name" class="popup__input popup__input_name" placeholder="Имя"
                         minlength="2" maxlength="40" required>
-                    <input type="text" name="about" class="popup__input popup__form_input_about" placeholder="О себе"
+                    <input type="text" name="about" class="popup__input popup__input_about" placeholder="О себе"
                         minlength="2" maxlength="200" required>
                     <button class="popup__save-button" type="submit" aria-label="save button">Сохранить</button>
                 </form>
