--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
             </div>
         </div>
     </div>
+    <template id="elements-template">
+        <li class="elements__item">
+            <img src="" alt="" class="elements__image">
+            <div class="elements__info">
+                <h2 class="elements__title"></h2>
+                <button class="elements__like-button" type="button" aria-label="like button"></button>
+            </div>
+        </li>
+    </template>
     <script src="script/index.js"></script>
 </body>
 
