--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         </header>
         <main class="content">
             <section class="profile">
-
                 <img src="images/Cousteau.jpg" alt="Аватар" class="profile__avatar-image">
-
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__edit-button button-opacity-hover" type="button"
@@ -34,52 +32,7 @@
             </section>
             <section class="elements">
                 <ul class="elements__list">
-                    <li class="elements__item">
-                        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск"
-                            class="elements__image">
-                        <div class="elements__info">
-                            <h2 class="elements__title">Карачаевск</h2>
-                            <button class="elements__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>
-                    <li class="elements__item">
-                        <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус"
-                            class="elements__image">
-                        <div class="elements__info">
-                            <h2 class="elements__title">Гора Эльбрус</h2>
-                            <button class="elements__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>
-                    <li class="elements__item">
-                        <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай" class="elements__image">
-                        <div class="elements__info">
-                            <h2 class="elements__title">Домбай</h2>
-                            <button class="elements__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="elements__item">
-                        <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус"
-                            class="elements__image">
-                        <div class="elements__info">
-                            <h2 class="elements__title">Гора Эльбрус</h2>
-                            <button class="elements__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>
-                    <li class="elements__item">
-                        <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай" class="elements__image">
-                        <div class="elements__info">
-                            <h2 class="elements__title">Домбай</h2>
-                            <button class="elements__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>
-                    <li class="elements__item">
-                        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Черкесия"
-                            class="elements__image">
-                        <div class="elements__info">
-                            <h2 class="elements__title">Карачаево-Черкесия</h2>
-                            <button class="elements__like-button" type="button" aria-label="like button"></button>
-                        </div>
-                    </li>
+
                 </ul>
             </section>
         </main>
@@ -104,7 +57,7 @@
                 <button class="popup__close-button button-opacity-hover" type="button"></button>
                 <h2 class="popup__title">Новое место</h2>
                 <form class="popup__form" name="add-card" id="popup__form_type_add-card">
-                    <input type="text" name="name" class="popup__input popup__input_value_name" placeholder="Название"
+                    <input type="text" name="name" class="popup__input popup__input_value_place" placeholder="Название"
                         minlength="2" maxlength="30" required>
                     <input type="url" name="link" class="popup__input popup__input_value_link"
                         placeholder="Ссылка на картинку" required>
