--- a/index.html
+++ b/index.html
@@ -66,8 +66,17 @@
             </div>
         </div>
     </div>
+    <div class="popup popup_type_image">
+        <div class="popup__container popup__container_type_image">
+            <button class="popup__close-button button-opacity-hover" type="button"></button>
+            <img src="" alt="" class="popup__image">
+            <p class="popup__image-title"></p>
+        </div>
+    </div>
     <template id="elements-template">
         <li class="elements__item">
+            <button class="elements__delete-button button-opacity-hover" type="button"
+                aria-label="delete picture"></button>
             <img src="" alt="" class="elements__image">
             <div class="elements__info">
                 <h2 class="elements__title"></h2>
