delete button fix

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="popup popup_type_image">
         <div class="popup__container popup__container_type_image">
             <button class="popup__close-button button-opacity-hover" type="button"></button>
-            <img src="" alt="" class="popup__image">
+            <img src="-" alt="-" class="popup__image">
             <p class="popup__image-title"></p>
         </div>
     </div>
