delete button fix

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <li class="elements__item">
             <button class="elements__delete-button button-opacity-hover" type="button"
                 aria-label="delete picture"></button>
-            <img src="" alt="" class="elements__image">
+            <img src="-" alt="-" class="elements__image">
             <div class="elements__info">
                 <h2 class="elements__title"></h2>
                 <button class="elements__like-button" type="button" aria-label="like button"></button>
