--- a/index.html
+++ b/index.html
@@ -43,12 +43,15 @@
             <div class="popup__container">
                 <button class="popup__close-button button-opacity-hover" type="button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form class="popup__form" name="edit-profile" id="popup__form_type_edit-profile">
+                <form class="popup__form" name="edit-profile" id="popup__form_type_edit-profile" novalidate>
                     <input type="text" name="name" class="popup__input popup__input_value_name" placeholder="Имя"
-                        minlength="2" maxlength="40" required>
+                        minlength="2" maxlength="40" required id="name-input">
+                    <span class="popup__error popup__input_type_error" id="name-error"></span>
                     <input type="text" name="about" class="popup__input popup__input_value_about" placeholder="О себе"
-                        minlength="2" maxlength="200" required>
-                    <button class="popup__save-button" type="submit" aria-label="save button">Сохранить</button>
+                        minlength="2" maxlength="200" required id="about-input">
+                    <span class="popup__error popup__input_type_error" id="about-error"></span>
+                    <button class="popup__save-button popup__save-button_disabled" type="submit"
+                        aria-label="save button" disabled>Сохранить</button>
                 </form>
             </div>
         </div>
@@ -58,10 +61,13 @@
                 <h2 class="popup__title">Новое место</h2>
                 <form class="popup__form" name="add-card" id="popup__form_type_add-card">
                     <input type="text" name="name" class="popup__input popup__input_value_place" placeholder="Название"
-                        minlength="2" maxlength="30" required>
+                        minlength="2" maxlength="30" required id="place-input">
+                    <span class="popup__error popup__input_type_error" id="place-error"></span>
                     <input type="url" name="link" class="popup__input popup__input_value_link"
-                        placeholder="Ссылка на картинку" required>
-                    <button class="popup__save-button" type="submit" aria-label="save button">Сохранить</button>
+                        placeholder="Ссылка на картинку" required id="link-input">
+                    <span class="popup__error popup__input_type_error" id="link-error"></span>
+                    <button class="popup__save-button popup__save-button_disabled" type="submit"
+                        aria-label="save button" disabled>Сохранить</button>
                 </form>
             </div>
         </div>
@@ -85,6 +91,7 @@
         </li>
     </template>
     <script src="script/index.js"></script>
+    <script src="script/validate.js"></script>
 </body>
 
 </html>
