form validation BEM

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <form class="popup__form" name="edit-profile" id="popup__form_type_edit-profile" novalidate>
                     <input type="text" name="name" class="popup__input popup__input_value_name" placeholder="Имя"
                         minlength="2" maxlength="40" required id="name-input">
-                    <span class="popup__error popup__input_type_error name-input-error" id="name-input-error"></span>
+                    <span class="popup__error popup__input-error name-input-error" id="name-input-error"></span>
                     <input type="text" name="about" class="popup__input popup__input_value_about" placeholder="О себе"
                         minlength="2" maxlength="200" required id="about-input">
-                    <span class="popup__error popup__input_type_error about-input-error" id="about-input-error"></span>
+                    <span class="popup__error popup__input-error about-input-error" id="about-input-error"></span>
                     <button class="popup__save-button popup__save-button_disabled" type="submit"
                         aria-label="save button" disabled>Сохранить</button>
                 </form>
@@ -62,10 +62,10 @@
                 <form class="popup__form" name="add-card" id="popup__form_type_add-card">
                     <input type="text" name="name" class="popup__input popup__input_value_place" placeholder="Название"
                         minlength="2" maxlength="30" required id="place-input">
-                    <span class="popup__error popup__input_type_error place-input-error" id="place-input-error"></span>
+                    <span class="popup__error popup__input-error place-input-error" id="place-input-error"></span>
                     <input type="url" name="link" class="popup__input popup__input_value_link"
                         placeholder="Ссылка на картинку" required id="link-input">
-                    <span class="popup__error popup__input_type_error link-input-error" id="link-input-error"></span>
+                    <span class="popup__error popup__input-error link-input-error" id="link-input-error"></span>
                     <button class="popup__save-button popup__save-button_disabled" type="submit"
                         aria-label="save button" disabled>Сохранить</button>
                 </form>
