--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p class="popup__image-title"></p>
         </div>
     </div>
-    <template id="elements-template">
+    <template class="elements-template">
         <li class="elements__item">
             <button class="elements__delete-button button-opacity-hover" type="button"
                 aria-label="delete picture"></button>
@@ -90,8 +90,10 @@
             </div>
         </li>
     </template>
-    <script src="script/index.js"></script>
-    <script src="script/validate.js"></script>
+    <script type='module' src="script/index.js"></script>
+    <script type='module' src="script/Card.js"></script>
+    <script type='module' src="script/FormValidator.js"></script>
+
 </body>
 
 </html>
