--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="popup popup_type_image">
         <div class="popup__container popup__container_type_image">
             <button class="popup__close-button button-opacity-hover" type="button"></button>
-            <img src="-" alt="-" class="popup__image">
+            <img src="#" alt="-" class="popup__image">
             <p class="popup__image-title"></p>
         </div>
     </div>
@@ -83,7 +83,7 @@
         <li class="elements__item">
             <button class="elements__delete-button button-opacity-hover" type="button"
                 aria-label="delete picture"></button>
-            <img src="-" alt="-" class="elements__image">
+            <img src="#" alt="-" class="elements__image">
             <div class="elements__info">
                 <h2 class="elements__title"></h2>
                 <button class="elements__like-button" type="button" aria-label="like button"></button>
