mini-css-extract-plugin configured

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Webpack</title>
+    <!-- содержимое head -->
+    <!-- уберите ссылку на файл стилей: -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <!-- содержимое body -->
 </body>
+import './styles/index.css';
 
 </html>
