--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
             <div class="popup__container">
                 <button class="popup__close-button button-opacity-hover" type="button"></button>
                 <h2 class="popup__title">Новое место</h2>
-                <form class="popup__form" name="add-card" id="popup__form_type_add-card">
+                <form class="popup__form" name="add-card" id="popup__form_type_add-card" novalidate>
                     <input type="text" name="name" class="popup__input popup__input_value_place" placeholder="Название"
                         minlength="2" maxlength="30" required id="place-input">
                     <span class="popup__error popup__input-error place-input-error" id="place-input-error"></span>
