--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
 <body class="body">
     <div class="page">
         <header class="header">
-            <img src="images/logo.svg" alt="Логотип" class="header__logo">
+            <img src="./images/logo.svg" alt="Логотип" class="header__logo">
         </header>
         <main class="content">
             <section class="profile">
-                <img src="images/Cousteau.jpg" alt="Аватар" class="profile__avatar-image">
+                <img src="./images/Cousteau.jpg" alt="Аватар" class="profile__avatar-image">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button class="profile__edit-button button-opacity-hover" type="button"
