--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         content="Проект об интересных местах в России. Добавляйте свое интересное место и делитесь им со всеми">
     <meta name="keywords" content="Место, места, интересное место">
     <meta name="author" content="Олег Плотников">
-    <!-- <link rel="stylesheet" href="pages/index.css"> -->
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Mesto Russia</title>
 </head>
 
@@ -90,7 +90,7 @@
             </div>
         </li>
     </template>
-    <!-- <script type='module' src="pages/index.js"></script> -->
+    <script type='module' src="./pages/index.js"></script>
 
 </body>
 
