like counter added

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,10 @@
             <img src="#" alt="-" class="elements__image">
             <div class="elements__info">
                 <h2 class="elements__title"></h2>
-                <button class="elements__like-button" type="button" aria-label="like button"></button>
+                <div class="elements__like-container">
+                    <button class=" elements__like-button" type="button" aria-label="like button"></button>
+                    <p class="elements__like-counter" data-likes="0">0</p>
+                </div>
             </div>
         </li>
     </template>
