--- a/src/index.html
+++ b/src/index.html
@@ -92,8 +92,8 @@
                 <form class="popup__form" name="change-avatar" id="popup__form_type_change-avatar" novalidate>
                     <h2 class="popup__title">Обновить аватар</h2>
                     <input type="url" name="link" class="popup__input popup__input_value_link"
-                        placeholder="Ссылка на картинку" required id="link-input">
-                    <span class="popup__error popup__input-error link-input-error" id="link-input-error"></span>
+                        placeholder="Ссылка на картинку" required id="link-input-avatar">
+                    <span class="popup__error popup__input-error link-input-error" id="link-input-error-avatar"></span>
                     <button class="popup__save-button popup__save-button_disabled" type="submit"
                         disabled>Сохранить</button>
                 </form>
